--- a/style.css
+++ b/style.css
@@ -1,156 +1,166 @@
-body{
-    background-color: rgb(0, 0, 0);
-    display: flex;
-    justify-content: center;
-    margin: 0px;
-}
-.contant1{
-    height: 123vh;
-    width: 50%;
-    background-color: rgb(228, 225, 225);
-}
-.contant2{
-    width:90%;
-    height: 123vh;
-    background-color:rgb(45, 80, 125) ;
-    /* display: flex; */
-    /* justify-content: center;
-    flex-direction: column; */
-}
-.image1{
-    width: 80%;
-    height: 15%;
-    border-radius:50% ;
-    margin: 15px 0px 10px 15px;
-    border: 4px solid black;
-}
-.contant3{
-color: white;
-font-size: 15px;
-margin: 0px 0px 5px 35px;
-}
-.contant4{
-color: rgb(189, 168, 94);
-font-size:11px ;
-margin: 0px 0px 0px 29px;
-}
-.contant5{
-width: 80%;
-}
-.contant6{
-font-size: 10px;
-color: #ffffff;
-margin: 20px 0px 0px 17px;
-}
-.image2{
-width: 10px;
-}
-.contant7{
+body {
+  background-color: rgb(0, 0, 0);
   display: flex;
-  font-size: 10px; 
+  justify-content: center;
+  margin: 0px;
+}
+.contant1 {
+  /* height: 123vh; */
+  width: 50%;
+  background-color: rgb(228, 225, 225);
+}
+.contant2 {
+  width: 90%;
+  /* height: 123vh; */
+  background-color: rgb(45, 80, 125);
+}
+.image1 {
+  width: 70%;
+  height: 15%;
+  border-radius: 50%;
+  margin: 15px 0px 10px 25px;
+  border: 4px solid black;
+}
+@media screen and (max-width: 1290px){
+    .image1{
+        height: 10%;
+        margin-left: 20px;
+    }
+}
+@media screen and (max-width: 1190px){
+    .image1{
+        height: 7%;
+        margin-left: 15px;
+    }
+}
+@media screen and (max-width: 920px){
+    .image1{
+        height: 5%;
+        margin-left: 13;
+    }
+}
+.contant3 {
+  color: white;
+  font-size: 15px;
+  margin: 0px 0px 5px 35px;
+}
+.contant4 {
+  color: rgb(189, 168, 94);
+  font-size: 11px;
+  margin: 0px 0px 0px 29px;
+}
+.contant5 {
+  width: 80%;
+}
+.contant6 {
+  font-size: 10px;
+  color: #ffffff;
+  margin: 20px 0px 0px 17px;
+}
+.image2 {
+  width: 10px;
+}
+.contant7 {
+  display: flex;
+  font-size: 10px;
   gap: 5px;
   margin: 5px 0px 0px 17px;
   color: #fff;
 }
-.image3{
-width: 10px;
+.image3 {
+  width: 10px;
 }
-.contant8{
-    display: flex;
-  font-size: 10px; 
+.contant8 {
+  display: flex;
+  font-size: 10px;
   gap: 5px;
   color: #fff;
-  margin: 0PX 0px 0px 17px;
+  margin: 0px 0px 0px 17px;
 }
-.contant9{
-    margin: 5px;
+.contant9 {
+  margin: 5px;
 }
-.contant11{
-    color: #ffffff;
-    font-size: 10px;
-    margin: 25px 0px 10px 17px;
+.contant11 {
+  color: #ffffff;
+  font-size: 10px;
+  margin: 25px 0px 10px 17px;
 }
-.contant10{
-    font-size:9PX ;
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
-}.contant12{
-    margin: 0px 0px 0px 17px;
-    color: #fff;
+.contant10 {
+  font-size: 9px;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
 }
-.contant13{
-    font-size: 11px;
-    color: #fff;
-    margin: 25px 0px 5px 17px;
+.contant12 {
+  margin: 0px 0px 0px 17px;
+  color: #fff;
 }
-.contant14{
-    color: yellow;
-    margin: 15px 0px 0px 17px;
-    font-size: 10px;
+.contant13 {
+  font-size: 11px;
+  color: #fff;
+  margin: 25px 0px 5px 17px;
 }
-.contant15{
-    font-size: 10px;
-    color: #fff;
-    margin: 3px 0px 0px 17px;
+.contant14 {
+  color: yellow;
+  margin: 15px 0px 0px 17px;
+  font-size: 10px;
 }
-.contant16{
-    display: flex;
-    /* flex-direction: column; */
-    margin: 2px 0px 0px 17px;
-    color: #fff;
-    gap: 8px;
+.contant15 {
+  font-size: 10px;
+  color: #fff;
+  margin: 3px 0px 0px 17px;
 }
-.contant18{
-    margin: 0px;
+.contant16 {
+  display: flex;
+  /* flex-direction: column; */
+  margin: 2px 0px 0px 17px;
+  color: #fff;
+  gap: 8px;
 }
-.contant17{
-    margin: 6px 0px 5px 0px;
+.contant18 {
+  margin: 0px;
 }
-.contant19{
-    color: rgb(45, 80, 125);
-    font-size: 20px;
-    margin: 30px 0px 0px 15px;
+.contant17 {
+  margin: 6px 0px 5px 0px;
 }
-.contant20{
-    display: flex;
+.contant19 {
+  color: rgb(45, 80, 125);
+  font-size: 20px;
+  margin: 30px 0px 0px 15px;
 }
-.contant21{
-    margin: 16px 23px 16px 15px;
-    font-size: 13px;
+.contant20 {
+  display: flex;
 }
-.contant22{
-    font-size: 13px;
-    margin: 13px 0px 0px 15px;
-    color: rgb(54, 99, 157);
-    width: 14vh;
+.contant21 {
+  margin: 16px 23px 16px 15px;
+  font-size: 13px;
 }
-.contant23{
-    font-size: 10px;
-    margin: 3px 0px 0px 15px;
+.contant22 {
+  font-size: 13px;
+  margin: 13px 0px 0px 15px;
+  color: rgb(54, 99, 157);
+  width: 14vh;
 }
-.contant24{
-    font-size: 13px;
-    color: rgb(54, 99, 157);
+.contant23 {
+  font-size: 10px;
+  margin: 3px 0px 0px 15px;
 }
-.contant25{
-    /* display: flex; */
+.contant24 {
+  font-size: 13px;
+  color: rgb(54, 99, 157);
 }
-.contant26{
-    display: flex;
-    gap: 20%;
+.contant26 {
+  display: flex;
+  gap: 20%;
 }
-.contant27{
-    /* display: flex; */
+.contant28 {
+  display: flex;
 }
-.contant28{
-    display: flex;
+.contant29 {
+  margin-bottom: 20px;
+  font-size: 12px;
 }
-.contant29{
-    margin: 0px;
-    font-size: 12px;
-}
-.contant30{
-    height: 5.vh;
-    margin: 1px 3px 0px 0px;
+.contant30 {
+  height: 5vh;
+  margin: 1px 3px 0px 0px;
 }
